--- a/blog_single.html
+++ b/blog_single.html
@@ -207,8 +207,10 @@
                   Sing Up For Newsletter
                 </h2>
                 <form action="#" method="post">
-                  <input type="email" name="useremail" placeholder="Enter your email"><i
+                  <div class="input_email">
+                    <input type="email" name="useremail" placeholder="Enter your email"><i
                     class="fa-solid fa-paper-plane"></i>
+                  </div>
 
                   <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
                       terms,Privecy Policy </label> </div>
