--- a/about.html
+++ b/about.html
@@ -524,8 +524,10 @@
                   Sing Up For Newsletter
                 </h2>
                 <form action="#" method="post">
-                  <input type="email" name="useremail" placeholder="Enter your email"><i
+                  <div class="input_email">
+                    <input type="email" name="useremail" placeholder="Enter your email"><i
                     class="fa-solid fa-paper-plane"></i>
+                  </div>
 
                   <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
                       terms,Privecy Policy </label> </div>
@@ -545,21 +547,6 @@
   </div>
   <!-- mmenu js start -->
   <script src="assets/js/mmenu-light.js"></script>
-  <script>
-    var menu = new MmenuLight(document.querySelector("#menu"), "all");
-
-    var navigator = menu.navigation({});
-    var drawer = menu.offcanvas({
-      // position: 'left'
-    });
-    //	Open the menu.
-    document
-      .querySelector('a[href="#menu"]')
-      .addEventListener("click", (evnt) => {
-        evnt.preventDefault();
-        drawer.open();
-      });
-  </script>
   <!-- mmenu js end -->
   <!-- slick slider jq start -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
