--- a/blog.html
+++ b/blog.html
@@ -137,7 +137,7 @@
                     <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
-                        Blog Title
+                       <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
                       </h2>
                       <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different</p>
                       <a href="blog_single.html" class="card-link">Read More <i class="fa-solid fa-angle-right"></i></a>
@@ -147,8 +147,8 @@
                     <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
-                        Blog Title
-                      </h2>
+                        <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
+                       </h2>
                       <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different</p>
                       <a href="blog_single.html" class="card-link">Read More <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -157,8 +157,8 @@
                     <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
-                        Blog Title
-                      </h2>
+                        <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
+                       </h2>
                       <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different</p>
                       <a href="blog_single.html" class="card-link">Read More <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -167,8 +167,8 @@
                     <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
-                        Blog Title
-                      </h2>
+                        <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
+                       </h2>
                       <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different</p>
                       <a href="blog_single.html" class="card-link">Read More <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -177,8 +177,8 @@
                     <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
-                        Blog Title
-                      </h2>
+                        <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
+                       </h2>
                       <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different</p>
                       <a href="blog_single.html" class="card-link">Read More <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -187,8 +187,8 @@
                     <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
-                        Blog Title
-                      </h2>
+                        <a href="blog_single.html" style="text-decoration: none;"> Blog Title</a>
+                       </h2>
                       <p class="card-text">Three Factors that Make Honeywell Productivity Solutions Different</p>
                       <a href="blog_single.html" class="card-link">Read More <i class="fa-solid fa-angle-right"></i></a>
                     </div>
@@ -287,8 +287,10 @@
                   Sing Up For Newsletter
                 </h2>
                 <form action="#" method="post">
-                  <input type="email" name="useremail" placeholder="Enter your email"><i
+                  <div class="input_email">
+                    <input type="email" name="useremail" placeholder="Enter your email"><i
                     class="fa-solid fa-paper-plane"></i>
+                  </div>
 
                   <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
                       terms,Privecy Policy </label> </div>
