--- a/home.html
+++ b/home.html
@@ -715,9 +715,10 @@
                   Sing Up For Newsletter
                 </h2>
                 <form action="#" method="post">
-                  <input type="email" name="useremail" placeholder="Enter your email"><i
-                    class="fa-solid fa-paper-plane"></i>
-
+              <div class="input_email">
+                <input type="email" name="useremail" placeholder="Enter your email"><i
+                class="fa-solid fa-paper-plane"></i>
+              </div>
                   <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
                       terms,Privecy Policy </label> </div>
                 </form>
@@ -736,21 +737,6 @@
   </div>
   <!-- mmenu js start -->
   <script src="assets/js/mmenu-light.js"></script>
-  <script>
-    var menu = new MmenuLight(document.querySelector("#menu"), "all");
-
-    var navigator = menu.navigation({});
-    var drawer = menu.offcanvas({
-      // position: 'left'
-    });
-    //	Open the menu.
-    document
-      .querySelector('a[href="#menu"]')
-      .addEventListener("click", (evnt) => {
-        evnt.preventDefault();
-        drawer.open();
-      });
-  </script>
   <!-- mmenu js end -->
   <!-- slick slider jq start -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
@@ -758,87 +744,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- slick js start -->
   <script src="assets/js/slick.js"></script>
-  <script>
-    $(document).on('ready', function () {
-      $(".regular").slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 6,
-        slidesToScroll: 6,
-        responsive: [{
-            breakpoint: 1024,
-            settings: {
-              slidesToShow: 3,
-              slidesToScroll: 3,
-              infinite: true,
-              dots: true
-            }
-          },
-          {
-            breakpoint: 600,
-            settings: {
-              slidesToShow: 2,
-              slidesToScroll: 2
-            }
-          },
-          {
-            breakpoint: 400,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          }
-          // You can unslick at a given breakpoint now by adding:
-          // settings: "unslick"
-          // instead of a settings object
-        ]
-      });
-      $(".news_slider").slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 2,
-        slidesToScroll: 2,
-        responsive: [{
-          breakpoint: 768,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }]
-      });
-    });
-  </script>
   <!-- slick js end -->
-  <!-- counter js start -->
-  <script>
-    $(".circle_percent").each(function () {
-      var $this = $(this),
-        $dataV = $this.data("percent"),
-        $dataDeg = $dataV * 3.6,
-        $round = $this.find(".round_per");
-      $round.css("transform", "rotate(" + parseInt($dataDeg + 180) + "deg)");
-      $this.append('<div class="circle_inbox"><span class="percent_text"></span></div>');
-      $this.prop('Counter', 0).animate({
-        Counter: $dataV
-      }, {
-        duration: 2000,
-        easing: 'swing',
-        step: function (now) {
-          $this.find(".percent_text").text(Math.ceil(now) + "%");
-        }
-      });
-      if ($dataV >= 51) {
-        $round.css("transform", "rotate(" + 360 + "deg)");
-        setTimeout(function () {
-          $this.addClass("percent_more");
-        }, 1000);
-        setTimeout(function () {
-          $round.css("transform", "rotate(" + parseInt($dataDeg + 180) + "deg)");
-        }, 1000);
-      }
-    });
-  </script>
-  <!-- counter js end -->
+  <!-- main js start -->
+  <script src="assets/js/main.js"></script>
+  <!-- main js end -->
 </body>
 
 </html>
