--- a/home.html
+++ b/home.html
@@ -646,7 +646,10 @@
                   <input type="email" name="useremail" placeholder="Email">
                   <input type="text" name="Phone" placeholder="Phone">
                   <textarea name="massage" id="massage" placeholder="Massage" cols="100" rows="5"></textarea>
-                  <a href="#" class="bannar_btn">Submit</a>
+                  <!-- <a href="#" class="bannar_btn">Submit</a> -->
+                  <div class="input_submit">
+                    <input type="submit">
+                  </div>
                 </form>
               </div>
             </div>
