--- a/our_team.html
+++ b/our_team.html
@@ -218,7 +218,7 @@
           <div class="row">
             <h2 class="partner_heding">HAPPY CUSTOMERS</h2>
             <h4 class="wer_working_with">Our Clients Testimonials</h4>
-            <section class="regular slider">
+            <section class="regular slider testmo_slider">
               <div>
                 <div class="card">
                   <div class="card-body">
@@ -483,7 +483,7 @@
   <script src="assets/js/slick.js"></script>
   <script>
     $(document).on('ready', function () {
-      $(".regular").slick({
+      $(".testmo_slider").slick({
         dots: true,
         infinite: true,
         slidesToShow: 2,
@@ -517,36 +517,9 @@
     });
   </script>
   <!-- slick js end -->
-  <!-- counter js start -->
-  <script>
-    $(".circle_percent").each(function () {
-      var $this = $(this),
-        $dataV = $this.data("percent"),
-        $dataDeg = $dataV * 3.6,
-        $round = $this.find(".round_per");
-      $round.css("transform", "rotate(" + parseInt($dataDeg + 180) + "deg)");
-      $this.append('<div class="circle_inbox"><span class="percent_text"></span></div>');
-      $this.prop('Counter', 0).animate({
-        Counter: $dataV
-      }, {
-        duration: 2000,
-        easing: 'swing',
-        step: function (now) {
-          $this.find(".percent_text").text(Math.ceil(now) + "%");
-        }
-      });
-      if ($dataV >= 51) {
-        $round.css("transform", "rotate(" + 360 + "deg)");
-        setTimeout(function () {
-          $this.addClass("percent_more");
-        }, 1000);
-        setTimeout(function () {
-          $round.css("transform", "rotate(" + parseInt($dataDeg + 180) + "deg)");
-        }, 1000);
-      }
-    });
-  </script>
-  <!-- counter js end -->
+  <!-- main js start -->
+  <script src="assets/js/main.js"></script>
+    <!-- main js end -->
 </body>
 
 </html>
