--- a/about.html
+++ b/about.html
@@ -324,7 +324,7 @@
               <div class="row">
                 <h2 class="partner_heding">TEAM MEMBERS</h2>
                 <h4 class="wer_working_with">Our Proffesional Team</h4>
-                <section class="regula slider news_slider">
+                <section class="regula slider team_slider">
                   <div class="news_slidr_box">
                     <div class="card">
                       <div class="card-body">
@@ -554,64 +554,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- slick js start -->
   <script src="assets/js/slick.js"></script>
-  <script>
-    $(document).on('ready', function () {
-      $(".regular").slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 6,
-        slidesToScroll: 6,
-        responsive: [{
-            breakpoint: 1024,
-            settings: {
-              slidesToShow: 3,
-              slidesToScroll: 3,
-              infinite: true,
-              dots: true
-            }
-          },
-          {
-            breakpoint: 600,
-            settings: {
-              slidesToShow: 2,
-              slidesToScroll: 2
-            }
-          },
-          {
-            breakpoint: 400,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          }
-          // You can unslick at a given breakpoint now by adding:
-          // settings: "unslick"
-          // instead of a settings object
-        ]
-      });
-      $(".news_slider").slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        responsive: [{
-          breakpoint: 768,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2
-          }
-        },
-        {
-            breakpoint: 500,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          },
-      ]
-      });
-    });
-  </script>
   <!-- slick js end -->
   <!-- counter js start -->
   <script>
@@ -643,6 +585,9 @@
     });
   </script>
   <!-- counter js end -->
+  <!-- main js start -->
+  <script src="assets/js/main.js"></script>
+  <!-- main js end -->
 </body>
 
 </html>
