--- a/home.html
+++ b/home.html
@@ -22,11 +22,9 @@
     .slider {
       width: 100%;
     }
-
     .slick-slide {
       margin: 0px 20px;
     }
-
     .slick-slide img {
       width: 100%;
     }
@@ -112,6 +110,7 @@
                       <div class="header_left">
                         <img class="cyber_logo" src="assets/images/hdr_logo.png" alt="Cyber Jet Logo"> <span
                           class="cyber_jet">Cyber<b>Jet</b> </span>
+                          <div class="for_darkmood"> <img src="assets/images/moon.png" id="moon_png" alt="For dark mood"></div>
                       </div>
                       <div class="header_menu">
                         <ul>
@@ -130,7 +129,7 @@
                           <li><a href="blog.html">Blog</a></li>
                           <li><a href="reviews.html">Reviews</a></li>
                           <li><a href="feature.html">Features</a></li>
-                        </ul>
+                        </ul>                      
                       </div>
                       <!-- mmenu start -->
                       <div id="page">
@@ -822,6 +821,29 @@
   <!-- main js start -->
   <script src="assets/js/main.js"></script>
   <!-- main js end -->
+  <!-- bg video js start -->
+  <script>
+jQuery(document).ready(function () {
+  jQuery('[data-vbg]').youtube_background();
+});
+document.querySelector('#vbg2').addEventListener('video-background-pause', function () {
+  console.log(arguments);
+});
+</script>
+ <!-- bg video js end -->
+<!-- dark mood js start -->
+  <script>
+    var moon_png = document.getElementById("moon_png");
+    moon_png.onclick = function(){
+      document.body.classList.toggle("dark_theme");
+      if(document.body.classList.contains("dark_theme")){
+        moon_png.src="assets/images/sun.png";
+      }else{
+        moon_png.src="assets/images/moon.png";
+      }
+    }
+  </script>
+  <!-- dark mood js end -->
 </body>
 
 </html>
