--- a/home.html
+++ b/home.html
@@ -789,8 +789,8 @@
                 </h2>
                 <form action="#" method="post">
                   <div class="input_email">
-                    <input type="email" name="useremail" placeholder="Enter your email"><i
-                      class="fa-solid fa-paper-plane"></i>
+                    <input type="email" name="useremail" placeholder="Enter your email"><a href="#"><i
+                      class="fa-solid fa-paper-plane"></i></a>
                   </div>
                   <div class="input_checkbox"> <input type="checkbox" id="terms"> <label for="terms"> i agree to the
                       terms,Privecy Policy </label> </div>
