--- a/blog_single.html
+++ b/blog_single.html
@@ -90,12 +90,13 @@
     <div class="lets_get_sec_bg" style="background-image: url(assets/images/What_we.avif);">
       <div class="lets_get_sec_overlay">
         <!--blog single page section start -->
-        <section class="blog_single_page">
+        <section class="blog_single_page" style="background-image: url(assets/images/blog_single.png);">
+          <div class="blog_single_overlay">
           <div class="container">
             <div class="row">
               <h1 class="blog_heding">Blog Heading</h1>
               <div class="blog_image_with_text">
-                <img src="assets/images/blog_single.png" alt="Details Image">
+                <!-- <img src="assets/images/blog_single.png" alt="Details Image"> -->
                 <h3 class="text_over_image"> dolor sit amet consectetur adipisicing elit. Ad laboriosam quos vero! Lorem
                   ipsum dolor sit amet consectetur adipisicing elit. Architecto dicta aspernatur at labore assumenda cum
                   quis aliquid totam mollitia a.</h3>
@@ -103,6 +104,7 @@
               <p class="blog_details_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia modi natus animi reiciendis, cum laudantium expedita ullam ad asperiores dolor dolores neque? Harum voluptate, omnis magnam ea, et veniam aliquid rem ipsa dolores asperiores voluptatum distinctio nostrum eum exercitationem eaque sequi illum repudiandae nihil ullam voluptatibus dolor deserunt. Earum, voluptatem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate similique, maxime illo dolorum aliquid ducimus placeat inventore pariatur eos impedit? Deleniti praesentium rerum harum repudiandae unde molestiae quaerat accusamus beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum illo itaque voluptatibus delectus nihil, enim impedit incidunt atque veniam, ratione voluptatem pariatur. Molestiae ipsa, ipsam quis rerum soluta dolorum commodi quisquam aliquam blanditiis enim modi praesentium perferendis minima. Quo debitis, ipsum ipsa perspiciatis recusandae quos eos minima nisi ratione fuga saepe ab laudantium voluptate! Eligendi minus aperiam nesciunt numquam voluptatibus tempore iure amet ipsa. Aliquid reiciendis, maiores numquam perferendis, laudantium enim nisi exercitationem veniam expedita iusto minus commodi facilis ad eius obcaecati rem aut nemo. Accusamus, iure? Pariatur, tenetur quidem ea perspiciatis veniam esse repellendus illum deserunt corrupti nam qui.</p>
             </div>
           </div>
+        </div>
         </section>
         <!-- blog single page section end -->
       </div>
