--- a/about.html
+++ b/about.html
@@ -78,6 +78,7 @@
                     </li>
                     <li><a href="pricing.html">Pricing</a></li>                 
                     <li><a href="blog.html">Blog</a></li>                 
+                    <li><a href="hire.html">Hire</a></li>                
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                 </div>
@@ -108,6 +109,7 @@
                         </li>
                         <li><a href="pricing.html">Pricing</a></li>                 
                         <li><a href="blog.html">Blog</a></li>                 
+                        <li><a href="hire.html">Hire</a></li>               
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </nav>
