--- a/blog.html
+++ b/blog.html
@@ -94,6 +94,7 @@
                           </li>
                           <li><a href="pricing.html">Pricing</a></li>
                           <li><a href="blog.html">Blog</a></li>
+                          <li><a href="hire.html">Hire</a></li>
                           <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                       </div>
@@ -125,6 +126,7 @@
                               </li>
                               <li><a href="pricing.html">Pricing</a></li>
                               <li><a href="blog.html">Blog</a></li>
+                              <li><a href="hire.html">Hire</a></li>
                               <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                           </nav>
@@ -140,14 +142,11 @@
               <section class="partner_section what_we_do about_us our_team our_news our_blog">
                 <div class="partner_overlay">
                   <div class="container">
-                    <div class="row">
-                      <div class="col-md-8">
-                        <h4 class="wer_working_with">Our Blogs</h4>
-                        <p class="bannar_text abut_text">Dolor sit amet consectetur adipisicing elit. Illum quia atque
-                          accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
-                          facilis.</p>
+                    <div class="row">                    
+                        <p class="bannar_text abut_text">OUR LARGEST BLOG</p>
+                        <h4 class="wer_working_with">Latest News From The Blog</h4>                                           
                         <div class="row our_team_row">
-                          <div class="col-md-6">
+                          <div class="col-md-4">
                             <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                             <div class="our_team_info">
                               <h2 class="our_team_heading">
@@ -159,7 +158,7 @@
                                   class="fa-solid fa-angle-right"></i></a>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-4">
                             <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                             <div class="our_team_info">
                               <h2 class="our_team_heading">
@@ -171,7 +170,7 @@
                                   class="fa-solid fa-angle-right"></i></a>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-4">
                             <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                             <div class="our_team_info">
                               <h2 class="our_team_heading">
@@ -183,7 +182,7 @@
                                   class="fa-solid fa-angle-right"></i></a>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-4">
                             <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                             <div class="our_team_info">
                               <h2 class="our_team_heading">
@@ -195,7 +194,7 @@
                                   class="fa-solid fa-angle-right"></i></a>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-4">
                             <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                             <div class="our_team_info">
                               <h2 class="our_team_heading">
@@ -207,7 +206,7 @@
                                   class="fa-solid fa-angle-right"></i></a>
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-4">
                             <a href="blog_single.html"> <img src="assets/images/blog.jpg" alt="Cyber jet blog"></a>
                             <div class="our_team_info">
                               <h2 class="our_team_heading">
@@ -221,113 +220,7 @@
                           </div>
 
                         </div>
-                      </div>
-                      <div class="col-md-4 blog_side_bar">
-                        <div class="latest_tweets">
-                          <h2 class="latest_tweets_heding">LATEST TWEETS</h2>
-                          <div class="latest_tweet_box">
-                            <div class="latest_tweet_icone"><i class="fa-brands fa-twitter"></i></div>
-                            <div class="latest_tweet_description">
-                              <p class="latest_tweet_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis voluptatum corrupti omnis.</p>
-                              <p class="latest_tweet_para"> <a href="#">https://t.co/ Lorem ipsum dolor sit amet
-                                  consectetur,</a> </p>
-
-                              <p class="latest_tweet_para ltst_twt_date">April 12, 2012 - 16:30.</p>
-                            </div>
-                          </div>
-                          <div class="latest_tweet_box">
-                            <div class="latest_tweet_icone"><i class="fa-brands fa-twitter"></i></div>
-                            <div class="latest_tweet_description">
-                              <p class="latest_tweet_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Perferendis voluptatum corrupti omnis.</p>
-                              <a href="#">https://t.co/ Lorem ipsum dolor sit amet consectetur,</a>
-                              <p class="latest_tweet_para ltst_twt_date">April 12, 2012 - 16:30.</p>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="latest_tweets popular_posts">
-                          <h2 class="latest_tweets_heding">POPULAR POSTS</h2>
-                          <div class="latest_tweet_box">
-                            <div class="latest_tweet_icone"><a href="#"><img src="assets/images/l.p.jpg"
-                                  alt="Latest post image"></a>
-                            </div>
-                            <div class="latest_tweet_description">
-                              <p class="latest_tweet_para">Lorem ipsum dolor sit voluptatum corrupti omnis.</p>
-                              <div class="latest_news_comment"><a href="#" class="latest_tweet_para"><i
-                                    class="fa-solid fa-comment"></i> 12 comment</a>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="latest_tweet_box">
-                            <div class="latest_tweet_icone"><a href="#"><img src="assets/images/l.p.jpg"
-                                  alt="Latest post image"></a>
-                            </div>
-                            <div class="latest_tweet_description">
-                              <p class="latest_tweet_para">Lorem ipsum dolor sit voluptatum corrupti omnis.</p>
-                              <div class="latest_news_comment"><a href="#" class="latest_tweet_para"><i
-                                    class="fa-solid fa-comment"></i> 12 comment</a>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="latest_tweet_box">
-                            <div class="latest_tweet_icone"><a href="#"><img src="assets/images/l.p.jpg"
-                                  alt="Latest post image">
-                            </div></a>
-                            <div class="latest_tweet_description">
-                              <p class="latest_tweet_para">Lorem ipsum dolor sit voluptatum corrupti omnis.</p>
-                              <div class="latest_news_comment">
-                                <a href="#" class="latest_tweet_para"><i class="fa-solid fa-comment"></i> 12 comment</a>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="latest_tweets categories">
-                          <h2 class="latest_tweets_heding">CATEGORIES</h2>
-                          <div class="latest_tweet_box">
-                            <div class="latest_tweet_description">
-                              <a href="#" class="latest_tweet_para">Iterviews (5)</a>
-                            </div>
-                            <div class="latest_tweet_description">
-                              <a href="#" class="latest_tweet_para">Video and Audio (3)</a>
-                            </div>
-                            <div class="latest_tweet_description">
-                              <a href="#" class="latest_tweet_para">Photography (8)</a>
-                            </div>
-                            <div class="latest_tweet_description">
-                              <a href="#" class="latest_tweet_para">News from around the world (13)</a>
-                            </div>
-                            <div class="latest_tweet_description">
-                              <a href="#" class="latest_tweet_para">News from around the world (13)</a>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="latest_tweets tages">
-                          <h2 class="latest_tweets_heding">TAGS</h2>
-                          <div class="tag_box">
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                            <a href="#" class="latest_tweet_box"> Tags </a>
-                          </div>
-                        </div>
-                        <div class="latest_tweets side_bar_search">
-                          <h2 class="latest_tweets_heding">SEARCH</h2>
-                          <div class="tag_box">
-                            <input type="search" name="search" placeholder="Search">
-                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                      </div>   
                   </div>
                 </div>
             </div>
