--- a/hire.html
+++ b/hire.html
@@ -112,7 +112,7 @@
                         </li>
                         <li><a href="pricing.html">Pricing</a></li>                 
                         <li><a href="blog.html">Blog</a></li>                 
-                        <li><a href="hire.html">Hire</a></li>                
+                        <li><a href="hire.html">Hire</a></li>               
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </nav>
@@ -124,18 +124,18 @@
           </div>
         </header>
         <!-- header section end -->
-        <!-- our team section start -->
-        <section class="partner_section what_we_do about_us our_team">
+        <!-- hire section start -->
+        <section class="partner_section what_we_do about_us our_team hire">
           <div class="partner_overlay">
             <div class="container">
               <div class="row">
-                <h4 class="wer_working_with">Our Team</h4>
+                <h4 class="wer_working_with">Hire</h4>
                 <p class="bannar_text abut_text">Dolor sit amet consectetur adipisicing elit. Illum quia atque
                   accusamus iste provident nisi, ad corrupti culpa officiis dolore modi, excepturi non molestiae
                   facilis.</p>
                 <div class="row our_team_row">
                   <div class="col-md-4">
-                    <img src="assets/images/newss2.jpg" alt="Eleten Rampel">
+                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
                         Eleten Rampel
@@ -147,7 +147,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img src="assets/images/newss2.jpg" alt="Eleten Rampel">
+                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
                         Eleten Rampel
@@ -159,7 +159,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img src="assets/images/newss2.jpg" alt="Eleten Rampel">
+                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
                         Eleten Rampel
@@ -171,7 +171,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img src="assets/images/newss2.jpg" alt="Eleten Rampel">
+                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
                         Eleten Rampel
@@ -183,7 +183,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img src="assets/images/newss2.jpg" alt="Eleten Rampel">
+                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
                         Eleten Rampel
@@ -195,7 +195,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img src="assets/images/newss2.jpg" alt="Eleten Rampel">
+                    <img src="assets/images/news1.avif" alt="Eleten Rampel">
                     <div class="our_team_info">
                       <h2 class="our_team_heading">
                         Eleten Rampel
@@ -211,170 +211,7 @@
             </div>
           </div>
         </section>
-        <!-- our team section end -->
-      </div>
-    </div>
-    <!-- Testmonial section start -->
-    <section class="partner_section testimonial_section" style="background-image: url(assets/images/bg4.avif);">
-      <div class="partner_overlay">
-        <div class="container">
-          <div class="row">
-            <h2 class="partner_heding">HAPPY CUSTOMERS</h2>
-            <h4 class="wer_working_with">Our Clients Testimonials</h4>
-            <section class="regular slider testmo_slider">
-              <div>
-                <div class="card">
-                  <div class="card-body">
-                    <div class="testmo_descrip">
-                      <i class="fa-solid fa-quote-left"></i>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Dicta, nostrum quam error facilis quisquam
-                        aut!</p>
-                    </div>
-                    <div class="testmo_title">
-                      <div class="img_box">
-                        <img src="assets/images/testmo (1).jpg" alt="Zanith Zark">
-                      </div>
-                      <div class="heiding_box">
-                        <h3 class="clients_name">Zanith Zark</h3>
-                        <p class="clients_desig">CEO Zetscale</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="card">
-                  <div class="card-body">
-                    <div class="testmo_descrip">
-                      <i class="fa-solid fa-quote-left"></i>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Dicta, nostrum quam error facilis quisquam
-                        aut!</p>
-                    </div>
-                    <div class="testmo_title">
-                      <div class="img_box">
-                        <img src="assets/images/testmo (1).jpg" alt="Zanith Zark">
-                      </div>
-                      <div class="heiding_box">
-                        <h3 class="clients_name">Zanith Zark</h3>
-                        <p class="clients_desig">CEO Zetscale</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="card">
-                  <div class="card-body">
-                    <div class="testmo_descrip">
-                      <i class="fa-solid fa-quote-left"></i>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Dicta, nostrum quam error facilis quisquam
-                        aut!</p>
-                    </div>
-                    <div class="testmo_title">
-                      <div class="img_box">
-                        <img src="assets/images/testmo (1).jpg" alt="Zanith Zark">
-                      </div>
-                      <div class="heiding_box">
-                        <h3 class="clients_name">Zanith Zark</h3>
-                        <p class="clients_desig">CEO Zetscale</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="card">
-                  <div class="card-body">
-                    <div class="testmo_descrip">
-                      <i class="fa-solid fa-quote-left"></i>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Dicta, nostrum quam error facilis quisquam
-                        aut!</p>
-                    </div>
-                    <div class="testmo_title">
-                      <div class="img_box">
-                        <img src="assets/images/testmo (1).jpg" alt="Zanith Zark">
-                      </div>
-                      <div class="heiding_box">
-                        <h3 class="clients_name">Zanith Zark</h3>
-                        <p class="clients_desig">CEO Zetscale</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="card">
-                  <div class="card-body">
-                    <div class="testmo_descrip">
-                      <i class="fa-solid fa-quote-left"></i>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Dicta, nostrum quam error facilis quisquam
-                        aut!</p>
-                    </div>
-                    <div class="testmo_title">
-                      <div class="img_box">
-                        <img src="assets/images/testmo (1).jpg" alt="Zanith Zark">
-                      </div>
-                      <div class="heiding_box">
-                        <h3 class="clients_name">Zanith Zark</h3>
-                        <p class="clients_desig">CEO Zetscale</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <div class="card">
-                  <div class="card-body">
-                    <div class="testmo_descrip">
-                      <i class="fa-solid fa-quote-left"></i>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content. Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Dicta, nostrum quam error facilis quisquam
-                        aut!</p>
-                    </div>
-                    <div class="testmo_title">
-                      <div class="img_box">
-                        <img src="assets/images/testmo (1).jpg" alt="Zanith Zark">
-                      </div>
-                      <div class="heiding_box">
-                        <h3 class="clients_name">Zanith Zark</h3>
-                        <p class="clients_desig">CEO Zetscale</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- testmonial section end -->
-    <div class="lets_get_sec_bg" style="background-image: url(assets/images/What_we.avif);">
-      <div class="lets_get_sec_overlay">
-        <!-- get in touch section start -->
-        <section class="partner_section what_we_do get_in_touch">
-          <div class="partner_overlay">
-            <div class="container">
-              <div class="row">
-                <h2 class="partner_heding">GET IN TOUCH</h2>
-                <h4 class="wer_working_with">Send Us a Massage</h4>
-                <form action="#" method="post">
-                  <input type="text" name="username" placeholder="Name">
-                  <input type="email" name="useremail" placeholder="Email">
-                  <input type="text" name="Phone" placeholder="Phone">
-                  <textarea name="massage" id="massage" placeholder="Massage" cols="100" rows="5"></textarea>
-                  <a href="#" class="bannar_btn">Submit</a>
-                </form>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- get in touch section end -->
+        <!-- hire section end -->
       </div>
     </div>
     <!-- footer section start -->
