--- a/home.html
+++ b/home.html
@@ -127,7 +127,7 @@
                             </ul>
                           </li>
                           <li><a href="blog.html">Blog</a></li>
-                          <li><a href="reviews.html">Reviews</a></li>
+                          <li><a href="hire.html">Hire</a></li>
                           <li><a href="feature.html">Features</a></li>
                         </ul>                      
                       </div>
@@ -202,6 +202,22 @@
     </div>
     <div class="partner_to_what_we_do_bgimage" style="background-image: url(assets/images/bg2.png);">
       <div class="partner_to_what_we_do_overlay">
+        <!-- partner section start -->
+        <section class="partner_section emergence_need_help">
+          <div class="partner_overlay">
+            <div class="container">
+              <div class="row">
+              <div class="col-md-8">
+                <h4 class="wer_working_with">Emergence Need Help Help?</h4>
+              </div>
+              <div class="col-md-4">
+                <a href="#" class="bannar_btn">Call now</a>
+              </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- partner section end -->
         <!-- partner section start -->
         <section class="partner_section">
           <div class="partner_overlay">
