--- a/pricing.html
+++ b/pricing.html
@@ -72,6 +72,7 @@
                     </li>
                     <li><a href="pricing.html">Pricing</a></li>                 
                     <li><a href="blog.html">Blog</a></li>                 
+                    <li><a href="hire.html">Hire</a></li>                
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                 </div>
@@ -102,6 +103,7 @@
                         </li>
                         <li><a href="pricing.html">Pricing</a></li>                 
                         <li><a href="blog.html">Blog</a></li>                 
+                        <li><a href="hire.html">Hire</a></li>               
                         <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </nav>
